--- a/docker-compose-prd.yml
+++ b/docker-compose-prd.yml
@@ -1,9 +1,14 @@
-# Redis Exporter Production Deployment
+# Redis Exporter Production Deployment with Prometheus & Grafana
 # Usage:
 #   docker-compose -f docker-compose-prd.yml up -d
 #
 # With password:
 #   REDIS_PASSWORD=your_password docker-compose -f docker-compose-prd.yml up -d
+#
+# Access:
+#   Grafana:    http://localhost:3000 (admin/admin)
+#   Prometheus: http://localhost:9090
+#   Exporter:   http://localhost:9121/metrics
 #
 # Environment variables:
 #   REDIS_ADDR     - Redis address (default: redis://redis:6379)
@@ -56,4 +61,41 @@ services:
         reservations:
           cpus: '0.1'
           memory: 32M
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./contrib/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.enable-lifecycle'
+    depends_on:
+      - redis_exporter
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_USERS_ALLOW_SIGN_UP: "false"
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./contrib/grafana/provisioning:/etc/grafana/provisioning:ro
+      - ./contrib/grafana/dashboards:/var/lib/grafana/dashboards:ro
+    depends_on:
+      - prometheus
+
+volumes:
+  prometheus_data:
+  grafana_data:
 
