--- a/docker-compose-cluster.yml
+++ b/docker-compose-cluster.yml
@@ -125,6 +125,11 @@ services:
       REDIS_ADDR: redis://172.30.0.11:7001
       REDIS_PASSWORD: ${REDIS_PASSWORD:-redis123}
       REDIS_EXPORTER_IS_CLUSTER: "true"
+      # 队列监控配置（按需启用，取消注释即可）
+      # 方式1: 监控指定队列（推荐，性能好）
+      # REDIS_EXPORTER_CHECK_SINGLE_KEYS: "db0=queue:orders,db0=queue:emails,db0=celery"
+      # 方式2: 模式匹配（大库慎用）
+      # REDIS_EXPORTER_CHECK_KEYS: "db0=queue:*"
     depends_on:
       redis-cluster-init:
         condition: service_completed_successfully
