fix(prometheus): remove redundant redis-cluster job
The 'redis-cluster' job was scraping /metrics endpoint directly which
added exporter instance (redis_exporter:9121) to metrics. This was
redundant since 'redis-cluster-nodes' job already covers all nodes
via /scrape endpoint with proper instance labels.

--- a/contrib/prometheus-cluster.yml
+++ b/contrib/prometheus-cluster.yml
@@ -7,11 +7,8 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'redis-cluster'
-    static_configs:
-      - targets: ['redis_exporter:9121']
-
-  # Scrape each cluster node directly via /scrape endpoint
+  # Scrape each cluster node via /scrape endpoint
+  # Note: 'redis-cluster' job removed - it was redundant and caused duplicate metrics
   - job_name: 'redis-cluster-nodes'
     static_configs:
       - targets:
