--- a/docker-compose-cluster.yml
+++ b/docker-compose-cluster.yml
@@ -125,6 +125,11 @@ services:
       REDIS_ADDR: redis://172.30.0.11:7001
       REDIS_PASSWORD: ${REDIS_PASSWORD:-redis123}
       REDIS_EXPORTER_IS_CLUSTER: "true"
+      # 项目标签配置说明:
+      # project 标签通过 Prometheus relabel 配置，见 contrib/prometheus-cluster.yml
+      # 在 static_configs.labels 中设置: project: 'g01'
+      # 这样所有指标都会带上 project="g01" 标签，方便 Grafana 按项目过滤
+      #
       # 队列监控配置（按需启用，取消注释即可）
       # 方式1: 监控指定队列（推荐，性能好）
       # REDIS_EXPORTER_CHECK_SINGLE_KEYS: "db0=queue:orders,db0=queue:emails,db0=celery"
