--- a/contrib/k8s-redis-cluster-exporter.yaml
+++ b/contrib/k8s-redis-cluster-exporter.yaml
@@ -1,15 +1,20 @@
-# Redis Exporter for Kubernetes - 集群监控方案
+# Redis Exporter for Kubernetes - 集群监控
 # 
-# 部署方式: 独立 Deployment + ServiceMonitor (Prometheus Operator)
-# 
-# 使用说明:
-#   1. 修改 ConfigMap 中的 Redis 节点地址
-#   2. 如有密码，修改 Secret 中的 REDIS_PASSWORD
-#   3. kubectl apply -f k8s-redis-cluster-exporter.yaml
+# 适用环境:
+#   - Redis Cluster StatefulSet (如 redis-cluster-0 ~ redis-cluster-5)
+#   - Headless Service: redis-cluster-headless
+#   - Namespace: redis
 #
-# 前提条件:
-#   - Prometheus Operator 已安装 (用于 ServiceMonitor)
-#   - 或使用 prometheus.io/scrape 注解 (传统方式)
+# 部署步骤:
+#   1. 如有密码，先创建 Secret (见下方)
+#   2. kubectl apply -f k8s-redis-cluster-exporter.yaml
+#   3. 验证: kubectl -n monitoring get pods -l app=redis-exporter
+#
+# 验证监控:
+#   kubectl -n monitoring port-forward svc/redis-exporter 9121:9121
+#   curl http://localhost:9121/metrics
+#   curl "http://localhost:9121/scrape?target=redis://redis-cluster-0.redis-cluster-headless.redis:6379"
+#
 ---
 apiVersion: v1
 kind: Namespace
@@ -18,7 +23,13 @@ metadata:
   labels:
     name: monitoring
 ---
-# Redis 密码 Secret (可选)
+# Redis 密码 (如无密码可跳过此 Secret)
+# 
+# 方式一: 直接创建
+# kubectl -n monitoring create secret generic redis-exporter-secret \
+#   --from-literal=REDIS_PASSWORD='your-password'
+#
+# 方式二: 应用此文件 (修改下方密码)
 apiVersion: v1
 kind: Secret
 metadata:
@@ -26,29 +37,7 @@ metadata:
   namespace: monitoring
 type: Opaque
 stringData:
-  # 如果 Redis 有密码，在这里配置
-  # 无密码则留空或删除此 Secret
-  REDIS_PASSWORD: ""
----
-# Redis 节点配置
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: redis-exporter-config
-  namespace: monitoring
-data:
-  # ============================================
-  # 在此配置要监控的 Redis 节点
-  # ============================================
-  # 格式: redis://host:port 或 redis://user:password@host:port
-  # 集群模式: 列出所有节点
-  REDIS_TARGETS: |
-    redis://redis-cluster-0.redis-cluster.default.svc.cluster.local:6379
-    redis://redis-cluster-1.redis-cluster.default.svc.cluster.local:6379
-    redis://redis-cluster-2.redis-cluster.default.svc.cluster.local:6379
-  
-  # 项目标签，用于 Grafana 过滤
-  REDIS_PROJECT: "production"
+  REDIS_PASSWORD: ""  # 填入 Redis 密码，无密码则留空
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -57,8 +46,6 @@ metadata:
   namespace: monitoring
   labels:
     app: redis-exporter
-    app.kubernetes.io/name: redis-exporter
-    app.kubernetes.io/component: exporter
 spec:
   replicas: 1
   selector:
@@ -68,29 +55,22 @@ spec:
     metadata:
       labels:
         app: redis-exporter
-        app.kubernetes.io/name: redis-exporter
       annotations:
-        # 传统 Prometheus 自动发现注解
         prometheus.io/scrape: "true"
         prometheus.io/port: "9121"
-        prometheus.io/path: "/metrics"
     spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 59000
         runAsGroup: 59000
-        fsGroup: 59000
       containers:
       - name: redis-exporter
         image: kevin197011/redis_exporter:latest
-        imagePullPolicy: Always
         args:
-          # 集群模式 - 自动发现所有节点
           - "--redis.addr="
           - "--is-cluster=true"
-          # 队列监控 (可选，按需取消注释)
+          # 队列监控 (可选)
           # - "--check-single-keys=db0=queue:orders,db0=queue:tasks"
-          # - "--check-keys=db0=queue:*"
         env:
         - name: REDIS_PASSWORD
           valueFrom:
@@ -101,7 +81,6 @@ spec:
         ports:
         - name: metrics
           containerPort: 9121
-          protocol: TCP
         resources:
           requests:
             cpu: 100m
@@ -113,22 +92,19 @@ spec:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
           capabilities:
-            drop:
-            - ALL
+            drop: ["ALL"]
         livenessProbe:
           httpGet:
             path: /health
             port: metrics
           initialDelaySeconds: 5
           periodSeconds: 15
-          timeoutSeconds: 5
         readinessProbe:
           httpGet:
             path: /health
             port: metrics
           initialDelaySeconds: 5
           periodSeconds: 10
-          timeoutSeconds: 5
 ---
 apiVersion: v1
 kind: Service
@@ -137,29 +113,27 @@ metadata:
   namespace: monitoring
   labels:
     app: redis-exporter
-    app.kubernetes.io/name: redis-exporter
 spec:
   type: ClusterIP
   ports:
   - name: metrics
     port: 9121
     targetPort: metrics
-    protocol: TCP
   selector:
     app: redis-exporter
 ---
 # ============================================
-# Prometheus Operator ServiceMonitor
-# (需要安装 Prometheus Operator)
+# Prometheus Operator - ServiceMonitor
+# 监控 redis namespace 下的 6 节点 Redis Cluster
 # ============================================
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: redis-exporter
+  name: redis-cluster
   namespace: monitoring
   labels:
-    app: redis-exporter
-    release: prometheus  # 根据你的 Prometheus Operator 配置调整
+    app: redis-cluster
+    release: prometheus  # 根据你的 Prometheus Operator label selector 调整
 spec:
   selector:
     matchLabels:
@@ -168,71 +142,69 @@ spec:
     matchNames:
     - monitoring
   endpoints:
-  - port: metrics
-    interval: 15s
-    scrapeTimeout: 10s
-    path: /metrics
----
-# ============================================
-# 多节点抓取配置 (PodMonitor 方式)
-# 通过 /scrape endpoint 抓取每个 Redis 节点
-# ============================================
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: redis-cluster-nodes
-  namespace: monitoring
-  labels:
-    app: redis-cluster-monitor
-    release: prometheus
-spec:
-  selector:
-    matchLabels:
-      app: redis-exporter
-  namespaceSelector:
-    matchNames:
-    - monitoring
-  endpoints:
-  # 节点 1
+  # redis-cluster-0
   - port: metrics
     interval: 15s
     path: /scrape
     params:
-      target:
-      - "redis://redis-cluster-0.redis-cluster.default.svc.cluster.local:6379"
+      target: ["redis://redis-cluster-0.redis-cluster-headless.redis.svc.cluster.local:6379"]
     relabelings:
-    - sourceLabels: [__param_target]
-      targetLabel: instance
-      regex: "redis://(.+)"
-      replacement: "$1"
+    - targetLabel: instance
+      replacement: "redis-cluster-0:6379"
     - targetLabel: project
-      replacement: "production"
-  # 节点 2
+      replacement: "g32-prod"
+  # redis-cluster-1
   - port: metrics
     interval: 15s
     path: /scrape
     params:
-      target:
-      - "redis://redis-cluster-1.redis-cluster.default.svc.cluster.local:6379"
+      target: ["redis://redis-cluster-1.redis-cluster-headless.redis.svc.cluster.local:6379"]
     relabelings:
-    - sourceLabels: [__param_target]
-      targetLabel: instance
-      regex: "redis://(.+)"
-      replacement: "$1"
+    - targetLabel: instance
+      replacement: "redis-cluster-1:6379"
     - targetLabel: project
-      replacement: "production"
-  # 节点 3
+      replacement: "g32-prod"
+  # redis-cluster-2
   - port: metrics
     interval: 15s
     path: /scrape
     params:
-      target:
-      - "redis://redis-cluster-2.redis-cluster.default.svc.cluster.local:6379"
+      target: ["redis://redis-cluster-2.redis-cluster-headless.redis.svc.cluster.local:6379"]
     relabelings:
-    - sourceLabels: [__param_target]
-      targetLabel: instance
-      regex: "redis://(.+)"
-      replacement: "$1"
+    - targetLabel: instance
+      replacement: "redis-cluster-2:6379"
     - targetLabel: project
-      replacement: "production"
-
+      replacement: "g32-prod"
+  # redis-cluster-3
+  - port: metrics
+    interval: 15s
+    path: /scrape
+    params:
+      target: ["redis://redis-cluster-3.redis-cluster-headless.redis.svc.cluster.local:6379"]
+    relabelings:
+    - targetLabel: instance
+      replacement: "redis-cluster-3:6379"
+    - targetLabel: project
+      replacement: "g32-prod"
+  # redis-cluster-4
+  - port: metrics
+    interval: 15s
+    path: /scrape
+    params:
+      target: ["redis://redis-cluster-4.redis-cluster-headless.redis.svc.cluster.local:6379"]
+    relabelings:
+    - targetLabel: instance
+      replacement: "redis-cluster-4:6379"
+    - targetLabel: project
+      replacement: "g32-prod"
+  # redis-cluster-5
+  - port: metrics
+    interval: 15s
+    path: /scrape
+    params:
+      target: ["redis://redis-cluster-5.redis-cluster-headless.redis.svc.cluster.local:6379"]
+    relabelings:
+    - targetLabel: instance
+      replacement: "redis-cluster-5:6379"
+    - targetLabel: project
+      replacement: "g32-prod"
