fix(dashboard): use dynamic datasource variable for all queries
- Variables (project, instance) now use ${datasource} instead of hardcoded uid
- All panels use $datasource variable
- Allows switching between different Prometheus datasources

--- a/contrib/k8s-redis-cluster-exporter.yaml
+++ b/contrib/k8s-redis-cluster-exporter.yaml
@@ -65,7 +65,7 @@ spec:
         runAsGroup: 59000
       containers:
       - name: redis-exporter
-        image: kevin197011/redis_exporter:latest
+        image: ghcr.io/kevin197011/redis_exporter:latest
         args:
           - "--redis.addr="
           - "--is-cluster=true"
