--- a/contrib/k8s-prometheus-scrape-config.yaml
+++ b/contrib/k8s-prometheus-scrape-config.yaml
@@ -23,7 +23,7 @@
       - 'redis-cluster-4.redis-cluster-headless.redis.svc.cluster.local:6379'
       - 'redis-cluster-5.redis-cluster-headless.redis.svc.cluster.local:6379'
       labels:
-        project: 'g32-prod-redis-cluster'
+        project: 'myapp-prod-redis-cluster'
 
   relabel_configs:
     # 构建 /scrape?target=redis://xxx 参数
@@ -76,7 +76,7 @@
 
     # 添加 project 标签
     - targetLabel: project
-      replacement: 'g32-prod'
+      replacement: 'myapp-prod'
 
     # 保留 Pod 名称
     - source_labels: [__meta_kubernetes_pod_name]
@@ -122,4 +122,4 @@
 
     # project 标签
     - targetLabel: project
-      replacement: 'g32-prod'
+      replacement: 'myapp-prod'
